Fixes to test class failures

--- a/src/main/metadata-au/classes/AddToRetailCampaignControllerTet.cls
+++ b/src/main/metadata-au/classes/AddToRetailCampaignControllerTet.cls
@@ -12,7 +12,7 @@ public class AddToRetailCampaignControllerTet
     static Vehicle__c ve2 = new Vehicle__c(Baumuster__c='forTest',Class__c='class-B',Brand__c='BENZ',Model__c='B220', EuroVIN__c='11111222222111122', UsVIN__c='11111222222111122',Latest_Sales_Person__c='xxx',Warranty_Start_Date__c=date.valueOf('2012-10-02'),FirstRegistrationDate__c=date.valueOf('2012-10-03'));
     static{
  		upsert new Trigger__c(Name = 'TriggerRetailCampaignMember', Trigger_Name__c = 'TriggerRetailCampaignMember', Trigger_Handler__c = 'TriggerRetailCampaignMemberHandler', 
-		enabled__c = true, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true);       
+		enabled__c = true, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true,Market__c='AU');       
     }
     static testMethod void RetailCampaignTest()
     {
