--- a/src/main/metadata-au/classes/TriggerCampaignLeadTest.cls
+++ b/src/main/metadata-au/classes/TriggerCampaignLeadTest.cls
@@ -13,7 +13,7 @@ Public with sharing class TriggerCampaignLeadTest {
     private static Campaign centralMKTCampaign;
     static{
 		upsert new Trigger__c(Name = 'TriggerAccount'+string.valueOf(System.Now()), Trigger_Name__c = 'TriggerAccount', Trigger_Handler__c = 'TriggerAccountHandler', 
-		enabled__c = true, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true);	
+		enabled__c = true, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true,Market__c='AU');	
         // Create one person account        // Create one person account
            personAccount = (Account)UtilTestData.createSobject(new Account(), 
            UtilTestData.ACCOUNT_RT_PERSON_ACCOUNT);
