--- a/src/main/metadata-au/classes/TriggerUtilTest.cls
+++ b/src/main/metadata-au/classes/TriggerUtilTest.cls
@@ -7,7 +7,7 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_AllDisabled_Insert()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true,Market__c='AU');
         triggerProcessed = false;
         
         // run test
@@ -23,7 +23,7 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_AllDisabled_Update()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true,Market__c='AU');
         Idea testIdea = new Idea(CommunityId = [select Id from Community where Name = 'Internal Community'].Id, Title = 'Test');
         insert testIdea;
         triggerProcessed = false;
@@ -41,7 +41,7 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_AllDisabled_Delete()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true,Market__c='AU');
         Idea testIdea = new Idea(CommunityId = [select Id from Community where Name = 'Internal Community'].Id, Title = 'Test');
         insert testIdea;
         triggerProcessed = false;
@@ -58,7 +58,7 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_InsertDisabled_Insert()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = true, update__c = false, delete__c = false);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = true, update__c = false, delete__c = false,Market__c='AU');
         triggerProcessed = false;
         
         // run test
@@ -74,7 +74,7 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_InsertDisabled_Update()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = true, update__c = false, delete__c = false);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = true, update__c = false, delete__c = false,Market__c='AU');
         Idea testIdea = new Idea(CommunityId = [select Id from Community where Name = 'Internal Community'].Id, Title = 'Test');
         insert testIdea;
         triggerProcessed = false;
@@ -92,7 +92,7 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_InsertDisabled_Delete()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = true, update__c = false, delete__c = false);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = true, update__c = false, delete__c = false,Market__c='AU');
         Idea testIdea = new Idea(CommunityId = [select Id from Community where Name = 'Internal Community'].Id, Title = 'Test');
         insert testIdea;
         triggerProcessed = false;
@@ -109,7 +109,7 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_UpdateDisabled_Insert()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = true, delete__c = false);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = true, delete__c = false,Market__c='AU');
         triggerProcessed = false;
         
         // run test
@@ -125,7 +125,7 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_UpdateDisabled_Update()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = true, delete__c = false);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = true, delete__c = false,Market__c='AU');
         Idea testIdea = new Idea(CommunityId = [select Id from Community where Name = 'Internal Community'].Id, Title = 'Test');
         insert testIdea;
         triggerProcessed = false;
@@ -143,7 +143,7 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_UpdateDisabled_Delete()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = true, delete__c = false);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = true, delete__c = false,Market__c='AU');
         Idea testIdea = new Idea(CommunityId = [select Id from Community where Name = 'Internal Community'].Id, Title = 'Test');
         insert testIdea;
         triggerProcessed = false;
@@ -160,7 +160,7 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_DeleteDisabled_Insert()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = false, delete__c = true);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = false, delete__c = true,Market__c='AU');
         triggerProcessed = false;
         
         // run test
@@ -176,7 +176,7 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_DeleteDisabled_Update()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = false, delete__c = true);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = false, delete__c = true,Market__c='AU');
         Idea testIdea = new Idea(CommunityId = [select Id from Community where Name = 'Internal Community'].Id, Title = 'Test');
         insert testIdea;
         triggerProcessed = false;
@@ -194,7 +194,7 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_DeleteDisabled_Delete()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = false, delete__c = true);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = false, delete__c = true,Market__c='AU');
         Idea testIdea = new Idea(CommunityId = [select Id from Community where Name = 'Internal Community'].Id, Title = 'Test');
         insert testIdea;
         triggerProcessed = false;
@@ -211,8 +211,8 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_UpdateDisabledDeleteDisabled_Insert()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = true, delete__c = false);
-        upsert new Trigger__c(Name = 'TestTrigger_2', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = false, delete__c = true);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = true, delete__c = false,Market__c='AU');
+        upsert new Trigger__c(Name = 'TestTrigger_2', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = false, delete__c = true,Market__c='AU');
         triggerProcessed = false;
         
         // run test
@@ -228,8 +228,8 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_UpdateDisabledDeleteDisabled_Update()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = true, delete__c = false);
-        upsert new Trigger__c(Name = 'TestTrigger_2', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = false, delete__c = true);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = true, delete__c = false,Market__c='AU');
+        upsert new Trigger__c(Name = 'TestTrigger_2', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = false, delete__c = true,Market__c='AU');
         Idea testIdea = new Idea(CommunityId = [select Id from Community where Name = 'Internal Community'].Id, Title = 'Test');
         insert testIdea;
         triggerProcessed = false;
@@ -247,8 +247,8 @@ public class TriggerUtilTest
     public static testMethod void testIsTriggerEnabled_UpdateDisabledDeleteDisabled_Delete()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = true, delete__c = false);
-        upsert new Trigger__c(Name = 'TestTrigger_2', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = false, delete__c = true);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = true, delete__c = false,Market__c='AU');
+        upsert new Trigger__c(Name = 'TestTrigger_2', Trigger_Name__c = 'TestTrigger', enabled__c = false, before__c = true, after__c = true, insert__c = false, update__c = false, delete__c = true,Market__c='AU');
         Idea testIdea = new Idea(CommunityId = [select Id from Community where Name = 'Internal Community'].Id, Title = 'Test');
         insert testIdea;
         triggerProcessed = false;
@@ -265,7 +265,7 @@ public class TriggerUtilTest
     public static testMethod void testHandleTrigger()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', Trigger_Handler__c = 'TestTriggerHandler', enabled__c = true, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', Trigger_Handler__c = 'TestTriggerHandler', enabled__c = true, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true,Market__c='AU');
         triggerHandlerCalled = false;
         
         // run test
@@ -281,7 +281,7 @@ public class TriggerUtilTest
     public static testMethod void testHandleTrigger_NoHandler()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = true, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', enabled__c = true, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true,Market__c='AU');
         triggerHandlerCalled = false;
         
         // run test
@@ -297,7 +297,7 @@ public class TriggerUtilTest
     public static testMethod void testHandleTrigger_NonExistingHandler()
     {
         // prepare test data
-        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', Trigger_Handler__c = 'UnknownTriggerHandler', enabled__c = true, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true);
+        upsert new Trigger__c(Name = 'TestTrigger_1', Trigger_Name__c = 'TestTrigger', Trigger_Handler__c = 'UnknownTriggerHandler', enabled__c = true, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true,Market__c='AU');
         triggerHandlerCalled = false;
         
         // run test
