--- a/src/main/metadata-au/classes/ComplaintDesHelperTest.cls
+++ b/src/main/metadata-au/classes/ComplaintDesHelperTest.cls
@@ -54,7 +54,7 @@ private class ComplaintDesHelperTest {
        }    
   
     public static void init(){
-        upsert new Trigger__c(Name = 'TriggerComplaintDescription', Trigger_Name__c = 'TriggerComplaintDescription', Trigger_Handler__c = 'TriggerComplaintDescriptionHandler', enabled__c = true, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true);
+        upsert new Trigger__c(Name = 'TriggerComplaintDescription', Trigger_Name__c = 'TriggerComplaintDescription', Trigger_Handler__c = 'TriggerComplaintDescriptionHandler', enabled__c = true, before__c = true, after__c = true, insert__c = true, update__c = true, delete__c = true,Market__c='AU');
         cas = (Case)UtilTestData.createSobject(new Case(Email__c='test545@test.com'), UtilTestData.CASE_RT_MB_COMPLAINT);
         cas.Workflow_Order__c=true;
         update cas;   
